--- a/Fr/services.html
+++ b/Fr/services.html
@@ -92,7 +92,10 @@
                             <img src="../img/icons/slogan.png">
                         </div>
                         <h4></h4>
-                        <p> Nous suivons les trois E de la gestion de notre réseau de clientèle en constante augmentation - <b>Efficience, Economie et Efficacité</b>.<br>
+                        <p style="text-align: center;">Nous suivons les trois E de la gestion de notre réseau de clientèle en constante augmentation
+                        <br>
+                        - <b>Efficience, Economie et Efficacité</b> -
+                        <br>
                         Nous comprenons le besoin d’efficacité et de contraintes financières de notre partenaire commercial. Nous savons que nous devons fournir une superbe qualité qui a un impact sur l'expérience des consommateurs et améliore l'image de marque de nos partenaires commerciaux.</p>
                     </div>
                 </div>
