--- a/Fr/contact.html
+++ b/Fr/contact.html
@@ -65,7 +65,7 @@
 
     <!-- Page Title Begin -->
 
-    <div class="main-page-title" style="background-image: url(../img/olive1.jpg);">
+    <div class="main-page-title" style="background-image: url(../img/background-7.jpg); background-position: bottom;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -92,7 +92,7 @@
                             </div>
                             <div class="col-lg-12">
                                 <input type="email" name="mail" placeholder="E-mail" required>
-                                <input type="text" name="subject" placeholder="Objet">
+                                <input type="text" name="subject" placeholder="Sujet">
                                 <textarea name="message" placeholder="Commentaires / Questions"></textarea>
                             </div>
                             <div class="col-lg-12 text-right">
