--- a/En/contact.html
+++ b/En/contact.html
@@ -65,7 +65,7 @@
 
     <!-- Page Title Begin -->
 
-    <div class="main-page-title" style="background-image: url(../img/olive1.jpg);">
+    <div class="main-page-title" style="background-image: url(../img/background-7.jpg); background-position: bottom;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
