--- a/Fr/about.html
+++ b/Fr/about.html
@@ -58,7 +58,7 @@
                             </ul>
                         </li>
                         <li><a class="active" href="about.html">À Propos</a></li>
-                        <li><a href="services.html">Service</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
