--- a/Fr/product-pages/product_1.html
+++ b/Fr/product-pages/product_1.html
@@ -58,7 +58,7 @@
                             </ul>
                         </li>
                         <li><a href="../about.html">À Propos</a></li>
-                        <li><a href="../services.html">Service</a></li>
+                        <li><a href="../services.html">Services</a></li>
                         <li><a href="../contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -66,6 +66,7 @@
         </div>
     </header>
     <!-- Header End -->
+    <main style="background-color: #e4e4e4;">
 
     <!-- Page Title Begin -->
 
@@ -165,8 +166,7 @@
 </div>
 <img src="../../img/olive-oil6.jpg" style="width: 100%;">
     <!-- Product End -->
-
-
+    </main>
     <!-- Footer Section Begin -->
     <footer class="footer-section spad">
         <div class="container">
