--- a/De/product-pages/product_1.html
+++ b/De/product-pages/product_1.html
@@ -66,7 +66,7 @@
         </div>
     </header>
     <!-- Header End -->
-
+    <main style="background-color: #e4e4e4;">
     <!-- Page Title Begin -->
 
     <div class="main-page-title" style="background-image: url(../../img/olive-oil.jpg); background-position:bottom;">
@@ -164,7 +164,7 @@
 </div>
 <img src="../../img/olive-oil6.jpg" style="width: 100%;">
     <!-- Product End -->
-
+</main>
 
     <!-- Footer Section Begin -->
     <footer class="footer-section spad">
