--- a/Fr/contact.html
+++ b/Fr/contact.html
@@ -54,7 +54,7 @@
                             </ul>
                         </li>
                         <li><a href="about.html">À Propos</a></li>
-                        <li><a href="services.html">Service</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a class="active" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
